# dofus-farmer

./: .gitignore  Cargo.toml  README.md  SETUP.md  diesel.toml
migrations/2023-06-10-203852_create_areas/: down.sql  up.sql
migrations/2023-06-10-203905_create_sub_areas/: down.sql  up.sql
migrations/2023-06-10-203928_create_maps/: down.sql  up.sql
migrations/2023-06-10-204012_create_items/: up.sql
migrations/2023-06-10-204017_create_monsters/: up.sql
migrations/2023-06-10-204110_create_drops/: down.sql  up.sql
migrations/2023-06-10-204125_create_recipes/: up.sql
migrations/2023-06-11-143818_create_monsters_sub_areas/: down.sql  up.sql
migrations/2023-06-24-151751_create_user_items/: down.sql  up.sql
migrations/2023-06-24-151759_create_user_ingredients/: down.sql  up.sql
